--- a/index.html
+++ b/index.html
@@ -232,6 +232,16 @@ all phases are  supported by our <b>open data analytics platform</b>.
           </a>
       </td>
 
+      <td>
+          <b>object detection</b><br/>
+          <a href="https://s3.amazonaws.com/rlx/streetview_detection/madrid_centro/dboard.html">
+              in Google Street view imagery
+          <br/>
+          <img style="border: 2px solid black" src="img/streetview.jpg"/>&nbsp;&nbsp;&nbsp;&nbsp;
+          </a>
+      </td>
+
+
       </tr>
       </table>
 <hr/>
